<resources>
    <string name="app_name">Waste Management</string>

    <!--LoginActivityogin Screen Constants-->
    <string name="login_username_hint_text">Username</string>
    <string name="login_password_hint_text">Password</string>
    <string name="login_button_test">Login</string>
    <string name="login_validation_error_message_username">Please enter username</string>
    <string name="login_validation_error_message_password">Please enter password</string>
    <string name="login_validation_error_invalid_user_or_password">Invalid username or password</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>

    <!--Main Screen Constants-->
    <string name="main_activity_add_item_button_text">Add an item</string>
    <string name="main_activity_filter_no_record">No records pending.</string>
    <string name="main_activity_filter_default_selected_text">All</string>
    <string name="main_activity_menu_logout_title">Logout</string>

    <!--Add an item Constants-->
    <string name="add_an_item_header_text">Add an item</string>
    <string name="add_an_item_form_field_scan_item_or_product_code">Scan or enter product barcode</string>
    <string name="add_an_item_form_field_amount_singles">Amount in singles</string>
    <string name="add_an_item_form_field_price">Price</string>
    <string name="add_an_item_form_field_button_add">Add</string>
    <string name="add_an_item_form_field_button_cancel">Cancel</string>
    <string name="add_an_item_record_add_successfully">Item add successfully</string>
    <string name="add_an_item_record_add_fail">Item add failed</string>
    <string name="add_an_item_record_delete_fail">Item delete failed</string>
    <string name="add_an_item_record_no_product_barcode">No product barcode</string>
    <string name="add_an_item_record_no_item_type">No item types</string>

</resources>
