<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@color/backgroundText"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/add_an_item_header_text"
                android:textColor="@color/textColorHeader"
                android:textSize="18dp"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutProductCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/editTextProductCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_an_item_form_field_scan_item_or_product_code"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text_font_size" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/spinnerItemType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp" />

            <include layout="@layout/custom_horizontal_line" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutAmountSingle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/editTextAmountSingle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_an_item_form_field_amount_singles"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text_font_size" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/editTextPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_an_item_form_field_price"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text_font_size" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_round_blue"
                android:text="@string/add_an_item_form_field_button_add"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />


            <Button
                android:id="@+id/buttonCancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:text="@string/add_an_item_form_field_button_cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
